# chitbot

./: .pre-commit-config.yaml  README.md  bot.py  config.py  handlers.py  keyboards.py  pyproject.toml  ruff.toml
.github/workflows/: .deploy.yml
db/: base_config.py  models.py  repository.py
migrations/: env.py
migrations/versions/: 1ebfe9f59c01_init.py
